alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
     text-align: left;
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: start;
 }
 
 
@@ -36,7 +36,7 @@ h2 {
 
 h3 {
     color: rgb(52, 51, 51);
-    text-align: center;
+    text-align: left;
     font-family: 'Roboto', sans-serif;
     font-size:large;
     font-weight: 800;
@@ -65,8 +65,8 @@ nav > ul > li {
     grid-gap: 10px;
     justify-content: start;
     justify-items: start;
-    align-content: left;
-    align-items: left;
+    align-content: start;
+    align-items: start;
 }
 /*nav > ul > li {
     padding: 30px;
@@ -86,7 +86,9 @@ nav > ul > li > a:hover {
 
 div > img {
     width: 600px;
-    height:auto;
+    height: auto;
+    justify-content: start;
+
     
 }
 /* .grid{
